# Image-Classification-Tutorials

./: .gitignore  CIFAR.ipynb  MNIST.ipynb  README.md  main.py  model.pt  network.py  pyproject.toml
images/: relu.ppm
runs/: epochs.pkl  losses.pkl
