[tool.poetry]
name = "mnist"
version = "0.1.0"
description = "Implementation of classifying MNIST dataset with PyTorch"
authors = ["Nathan Van Utrecht <nvanutrecht@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
torch = "^2.3.0"
numpy = "^1.26.4"
ipykernel = "^6.29.4"
pillow = "^10.3.0"
matplotlib = "^3.8.4"

[tool.poetry.group.dev.dependencies]
torchvision = "^0.18.0"
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
